--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
 			"npm run watch & npm run watch-sass:management & npm run start:management & wait",
 		"dev:ui": "npm run watch & npm run watch-sass:ui & npm run start:ui & wait",
 		"lint": "tslint --project tsconfig.json",
+		"lint:headless": "tslint --project test/headless/tsconfig.json",
 		"nuke": "rm -rf dist node_modules",
 		"postinstall": "./bin/setup-dist",
 		"sass:all": "npm run sass:management & npm run sass:ui",
@@ -32,7 +33,7 @@
 		"@types/compression": "0.0.35",
 		"@types/csv-parse": "1.1.11",
 		"@types/dotenv": "4.0.2",
-		"@types/elasticsearch": "^5.0.19",
+		"@types/elasticsearch": "5.0.21",
 		"@types/express-session": "1.15.6",
 		"@types/google-protobuf": "3.2.7",
 		"@types/i18n": "0.8.3",
@@ -41,16 +42,17 @@
 		"@types/node-fetch": "1.6.7",
 		"@types/passport": "0.4.2",
 		"@types/passport-saml": "0.15.5",
-		"@types/pg": "7.4.3",
 		"@types/request": "2.47.0",
 		"@types/session-file-store": "1.2.0",
+		"@types/unzip": "0.1.0",
+		"@types/xml2js": "0.4.2",
 		"node-sass": "4.7.2",
 		"dotenv": "5.0.0",
-		"elasticsearch": "^14.1.0",
-		"make-runnable": "^1.3.6",
+		"elasticsearch": "14.1.0",
+		"make-runnable": "1.3.6",
 		"nodemon": "1.14.12",
 		"protobufjs": "6.8.4",
-		"striptags": "^3.1.1",
+		"striptags": "3.1.1",
 		"tslint": "5.9.1",
 		"typescript": "2.7.1"
 	},
@@ -58,7 +60,6 @@
 		"aws-sdk": "2.189.0",
 		"axios": "0.17.1",
 		"compression": "1.7.1",
-		"concat": "1.0.3",
 		"csv": "2.0.0",
 		"dgraph-js": "1.1.1-beta.2",
 		"dotenv": "5.0.0",
@@ -78,11 +79,10 @@
 		"notifications-node-client": "4.1.0",
 		"passport": "0.4.0",
 		"passport-saml": "0.32.1",
-		"pg": "7.4.1",
 		"protobufjs": "6.8.4",
 		"request": "2.83.0",
 		"request-promise": "4.2.2",
-		"serve-favicon": "^2.4.5",
+		"serve-favicon": "2.4.5",
 		"session-file-store": "1.2.0",
 		"svelte": "1.55.0",
 		"unzip": "0.1.11",
