--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
 		"watch-sass:management": "node-sass -w -r src/management-ui/assets/styles -o dist/management-ui/assets/styles --output-style compressed"
 	},
 	"devDependencies": {
+		"@types/chai": "^4.1.4",
 		"@types/compression": "0.0.35",
 		"@types/connect-flash": "0.0.34",
 		"@types/cors": "2.8.3",
@@ -32,24 +33,29 @@
 		"@types/google-protobuf": "3.2.7",
 		"@types/helmet": "0.0.37",
 		"@types/i18n": "0.8.3",
-		"@types/jasmine": "2.8.6",
 		"@types/lusca": "1.5.0",
 		"@types/mime-types": "2.1.0",
+		"@types/mocha": "^5.2.3",
 		"@types/node": "9.4.0",
 		"@types/node-fetch": "1.6.7",
 		"@types/passport": "0.4.2",
+		"@types/proxyquire": "^1.3.28",
 		"@types/request": "2.47.0",
 		"@types/session-file-store": "1.2.0",
 		"@types/shortid": "0.0.29",
+		"@types/supertest": "^2.0.4",
 		"@types/tmp": "0.0.33",
 		"@types/unzip": "0.1.0",
 		"@types/xml2js": "0.4.2",
+		"chai": "^4.1.2",
 		"csv": "2.0.0",
-		"jasmine-console-reporter": "3.0.2",
 		"make-runnable": "1.3.6",
+		"mocha": "^5.2.0",
 		"nodemon": "1.14.12",
 		"protobufjs": "6.8.4",
+		"proxyquire": "^2.0.1",
 		"slugid": "1.1.0",
+		"supertest": "^3.1.0",
 		"traverson": "6.0.1",
 		"tslint": "5.9.1",
 		"typescript": "2.7.1"
@@ -77,7 +83,7 @@
 		"govuk_frontend_toolkit": "7.2.0",
 		"helmet": "3.12.0",
 		"i18n": "0.8.3",
-		"jasmine": "3.1.0",
+		"lodash": "^4.17.10",
 		"log4js": "2.5.2",
 		"lusca": "1.5.2",
 		"mime-types": "2.1.18",
