--- a/package.json
+++ b/package.json
@@ -18,13 +18,14 @@
 		"start:all": "npm run start:management & npm run start:ui",
 		"start:management": "cd dist/management-ui && node --icu-data-dir=../../node_modules/full-icu ../node_modules/management-ui/server.js",
 		"start:ui": "cd dist/ui && node --icu-data-dir=../../node_modules/full-icu ../node_modules/ui/server.js",
-		"test": "NODE_ICU_DATA=node_modules/full-icu node dist/jasmine.js",
+		"test": "NODE_ICU_DATA=node_modules/full-icu find dist -name '*.spec.js' | xargs node_modules/mocha/bin/mocha --exit",
 		"watch": "./bin/tsc -w",
 		"watch-sass:ui": "node-sass -w -r src/ui/assets/styles -o dist/ui/assets/styles --output-style compressed",
 		"watch-sass:management": "node-sass -w -r src/management-ui/assets/styles -o dist/management-ui/assets/styles --output-style compressed"
 	},
 	"devDependencies": {
 		"@types/chai": "^4.1.4",
+		"@types/cheerio": "^0.22.8",
 		"@types/compression": "0.0.35",
 		"@types/connect-flash": "0.0.34",
 		"@types/cors": "2.8.3",
@@ -48,6 +49,7 @@
 		"@types/unzip": "0.1.0",
 		"@types/xml2js": "0.4.2",
 		"chai": "^4.1.2",
+		"cheerio": "^1.0.0-rc.2",
 		"csv": "2.0.0",
 		"make-runnable": "1.3.6",
 		"mocha": "^5.2.0",
@@ -61,9 +63,11 @@
 		"typescript": "2.7.1"
 	},
 	"dependencies": {
+		"@types/app-root-path": "^1.2.4",
 		"@types/express-validator": "3.0.0",
 		"@types/lodash": "^4.14.110",
 		"@types/traverson": "2.0.28",
+		"app-root-path": "^2.1.0",
 		"axios": "0.17.1",
 		"azure-storage": "2.8.1",
 		"compression": "1.7.1",
@@ -83,7 +87,6 @@
 		"govuk_frontend_toolkit": "7.2.0",
 		"helmet": "3.12.0",
 		"i18n": "0.8.3",
-		"lodash": "^4.17.10",
 		"log4js": "2.5.2",
 		"lusca": "1.5.2",
 		"mime-types": "2.1.18",
