--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
 		"start:all": "npm run start:management & npm run start:ui",
 		"start:management": "cd dist/management-ui && node --icu-data-dir=../../node_modules/full-icu ../node_modules/management-ui/server.js",
 		"start:ui": "cd dist/ui && node --icu-data-dir=../../node_modules/full-icu ../node_modules/ui/server.js",
-		"test": "NODE_ICU_DATA=node_modules/full-icu find dist -name '*.spec.js' | xargs node_modules/mocha/bin/mocha --exit",
+		"test": "find dist -name '*.spec.js' | NODE_ICU_DATA=node_modules/full-icu xargs node_modules/mocha/bin/mocha --exit",
 		"watch": "./bin/tsc -w",
 		"watch-sass:ui": "node-sass -w -r src/ui/assets/styles -o dist/ui/assets/styles --output-style compressed",
 		"watch-sass:management": "node-sass -w -r src/management-ui/assets/styles -o dist/management-ui/assets/styles --output-style compressed"
